--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
-node_modules/**/*
-.expo/*
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
-web-report/
+/*/.expo/*
+/*/npm-debug.*
+/*/*.jks
+/*/*.p8
+/*/*.p12
+/*/*.key
+/*/*.mobileprovision
+/*/*.orig.*
+/*/web-build/
+/*/web-report/
 
 # macOS
-.DS_Store
+/*/.DS_Store
 
 # dependencies
 /*/node_modules
