--- a/.github/workflows/testScreens.yml
+++ b/.github/workflows/testScreens.yml
@@ -12,6 +12,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
+        working-directory: ./MobileApp
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
