Update and rename node.js.yml to publish_mobile_app.yml

--- a/.github/workflows/publish_mobile_app.yml
+++ b/.github/workflows/publish_mobile_app.yml
@@ -17,5 +17,9 @@ jobs:
           expo-version: 3.x
           expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
           expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
-      - run: yarn install
-      - run: expo publish
+      - name: install
+        working-directory: ./MobileApp
+        run: yarn install
+      - name: publish
+        working-directory: ./MobileApp
+        run: expo publish
